--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "vue": "^2.5.16",
+    "vue-awesome": "^2.3.7",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
