--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@types/chai": "^4.1.0",
     "@types/mocha": "^2.2.46",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.15",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.0.4",
     "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
     "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
     "@vue/test-utils": "^1.0.0-beta.16",
     "chai": "^4.1.2",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.4",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.16"
   },
